C1172: Fixed the alignment of validation errors on disclosure page in ie

--- a/Markel.REMUS.DesignSystem.Web/Components/forms/scss/_forms.scss
+++ b/Markel.REMUS.DesignSystem.Web/Components/forms/scss/_forms.scss
@@ -12,6 +12,10 @@
             }
         }
 
+        legend{
+            width:100%;
+        }
+
         fieldset {
             clear: both;
             margin: 0;
